gcc/testsuite/rust/rustc/ui/tool-attributes/diagnostic_item.rs
#[rustc_diagnostic_item = "foomp"] // { dg-error ".E0658." "" { target *-*-* } }
struct Foomp;
fn main() {}

